@@ -1,6 +1,10 @@
+from zope.i18nmessageid.message import MessageFactory
 from plone.namedfile import interfaces
 from plone.namedfile import field
 from plone.schemaeditor.fields import FieldFactory
+
+_ = MessageFactory('plone')
+
 
 class INamedFileField(interfaces.INamedFileField):
 
@@ -29,8 +33,8 @@ class INamedImageField(interfaces.INamedImageField):
             'missing_value'].description,
         required=False)
 
-NamedFileFactory = FieldFactory(field.NamedFile, u'File Upload')
-NamedImageFactory = FieldFactory(field.NamedImage, u'Image')
+NamedFileFactory = FieldFactory(field.NamedFile, _(u'File Upload'))
+NamedImageFactory = FieldFactory(field.NamedImage, _(u'Image'))
 
 class INamedBlobFileField(interfaces.INamedBlobFileField):
 
@@ -62,5 +66,5 @@ class INamedBlobImageField(interfaces.INamedBlobImageField):
             'missing_value'].description,
         required=False)
 
-NamedBlobFileFactory = FieldFactory(field.NamedBlobFile, u'File Upload')
-NamedBlobImageFactory = FieldFactory(field.NamedBlobImage, u'Image')
+NamedBlobFileFactory = FieldFactory(field.NamedBlobFile, _(u'File Upload'))
+NamedBlobImageFactory = FieldFactory(field.NamedBlobImage, _(u'Image'))
