@@ -4,7 +4,8 @@ Changelog
 3.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Internationalize field factory label.
+  [thomasdesvenain]
 
 
 3.0.0 (2014-04-13)
